tests/language_tests/pass/0083_main_can_call_later_defined_function.ee
fn main() {
    print(1);
    helper();
    print(3);
}

fn helper() {
    print(2);
}
