tests/language_tests/fail/0049_continue_in_called_function.ee
fn helper() {
    continue;
}

fn main() {
    helper();
}
